--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 :root{
     --primary-color: #007bff;
-    --secondary-color: #6c757d;
+    --secondary-color: #e4e4e4;
     --background-dark-color: #10121A;
     --background-dark-grey: #191D2B;
     --border-color: #2e344e;
@@ -137,4 +137,123 @@ body{
 .container > main{
     grid-area: main;
     background-color: var(--background-light-color);
+}
+
+.container > header{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.container > header :is(.search-box, .user-box){
+    display: flex;
+    height: 50%;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.container > header .info-box{
+    display: flex;
+    height: 50%;
+    width: 100%;
+    padding: 0 5rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container > header > .user-box{
+    justify-content: space-evenly;
+}
+
+.container > header > * > button{
+    background-color: var(--background-light-color);
+    border: none;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.5s;
+    height: 2.5rem;
+}
+
+.container > header > .search-box > button{
+    border-radius: 50%;
+}
+
+.container > header > .search-box > input{
+    background-color: var(--secondary-color);
+    width: 80%;
+    border: none;
+    padding: 0.5rem 2rem;
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+    transition: 0.5s;
+    height: 2.5rem;;
+    font-size: 1rem;
+}
+
+.container > header > .search-box > input:focus{
+    background-color: var(--white-color);
+}
+
+.container > header > .info-box > .user-info{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 25%;
+}
+
+.container > header > .info-box > .actions{
+    width: 35%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.container > header > .info-box button{
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #3c4043;
+    cursor: pointer;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans",Roboto,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: .25px;
+    line-height: normal;
+    max-width: 100%;
+    overflow: visible;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform,opacity;
+    z-index: 0;
+}
+
+.container > header > .info-box button:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.container > header > .info-box button:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.container > header > .info-box button:focus {
+  outline: none;
+  border: 2px solid #4285f4;
 }
